LoadVantage/wwwroot/css/site.css
/* ... */
.fancy-project-button:before {
    bottom: 100%;
    right: 100%;
    transition: all 0.8s;
}

.fancy-project-button:hover:before {
    bottom: -30px;
    right: -30px;
}

.fancy-project-button:active:before {
    background: #3a0ca3;
    transition: background 0.3s;
}


/*--------------------------------------------------------------
# FANCY CARDS ( HOME INDEX - UNAUTHORIZED )
--------------------------------------------------------------*/

.fancy-card-loadVantage {
    --color: #560bad;
    font-family: Nunito;
    font-size: 30px !important;
    display: inline-block;
    width: 10em;
    height: 10em;
    line-height: 2em;
    margin: -1.3em -0.3em -0.3em -1.3em;
    position: relative;
    cursor: pointer;
    border: none;
    transition: color 0.9s;
    z-index: 1;
    overflow: hidden;
    border-radius: 20px;
    font-weight: 750;
    color: var(--color);
    font-size: 22px;
    box-shadow: 0 2px 1px rgba(0,0,0,0.09), 0 4px 2px rgba(0,0,0,0.09), 0 8px 4px rgba(0,0,0,0.09), 0 16px 8px rgba(0,0,0,0.09), 0 32px 16px rgba(0,0,0,0.09);
}

.fancy-card-loadVantage:before {
    content: "";
    position: absolute;
    z-index: -1;
    background: var(--color);
    height: 15em;
    width: 15em;
    border-radius: 50%;
}

.fancy-card-loadVantage:hover {
    color: #fff;
    box-shadow: 0 1px 1px rgba(0,0,0,0.08), 0 2px 10px rgba(140, 192, 247, 1), 0 4px 4px rgba(0,0,0,0.16), 0 8px 8px rgba(0,0,0,0.20);
    transition: box-shadow 0.5s ease;
}

.fancy-card-loadVantage:before {
    bottom: 100%;
    right: 100%;
    transition: all 0.6s;
}

.fancy-card-loadVantage:hover:before {
    bottom: -20px;
    right: -20px;
}

.fancy-card-loadVantage:active:before {
    background: #8c1db8;
    transition: background 0.3s;
}

.fancy-card-loadVantage:hover h3 {
    color: ghostwhite;
}


/* Navbar Styles */
#header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px;
    z-index: 9999;
}

#links-area-layout {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
    padding: 0;
}

#links-area-layout .nav-item {
    margin: 0 1px;
}

.navbar-toggler {
    background-color: #333;
    border: none;
    font-size: 30px;
    color: white;
    display: none; /* Hidden by default, shown on smaller screens */
}

.navbar-toggler-icon {
    background-color: #121112;
    color: white !important;
}

/* Show the toggle button on smaller screens */
@media (max-width: 991px) {
    .navbar-toggler {
        display: block;
    }

    #links-area-layout {
        display: none;
        width: 100%;
        text-align: center;
        flex-direction: column;
        background-color: #f8f9fa;
        position: absolute;
        top: 60px;
        right: 0;
        left: 0;
    }

        #links-area-layout.collapse.show {
            display: flex;
        }
}

/*--------------------------------------------------------------
# LOGIN BUTTON AND REGISTER BUTTONS
--------------------------------------------------------------*/

#login-submit,
#registerSubmit {
    background: linear-gradient(to left, #8360c3, #4cddf1);
    color: #ffffff;
    border: 2px solid #8c1db8;
    transition: transform 0.4s ease, box-shadow 0.4s ease;
    box-shadow: 7px 7px 4px #121112;
}

#login-submit:hover,
#registerSubmit:hover{
    animation: upDown 2s infinite ease;
}

@keyframes upDown {
    5% {
        transform: translateY(0.00em);
        box-shadow: 7px 7px 4px #121112;
    }
    10% {
        transform: translateY(0.05em);
        box-shadow: 6px 6px 4px #121112;
    }
    15% {
        transform: translateY(0.10em);
        box-shadow: 6px 6px 4px #121112;
    }

    20% {
        transform: translateY(0.15em);
        box-shadow: 5px 5px 4px #121112;
    }

    25% {
        transform: translateY(0.20em);
        box-shadow: 4px 4px 4px #121112;
    }

    30% {
        transform: translateY(0.25em);
        box-shadow: 3px 3px 3px #121112;
    }

    35% {
        transform: translateY(0.30em);
        box-shadow: 2px 2px 2px #121112;
    }

    40% {
        transform: translateY(0.35em);
        box-shadow: 1px 1px 1px #121112;
    }


    45% {
        transform: translateY(0.40em);
        box-shadow: 0px 0px 0px #121112;
    }
}

/*--------------------------------------------------------------
# LOAD VANTAGE LOGO
--------------------------------------------------------------*/

    .cls-1 {
        fill: #4ddcf0;
        animation: cls1 3s ease infinite both;
    }

    @keyframes cls1 {
        0% {
        fill: #8c1db8;
    }

    34% {
        fill: #9e3dc4;
    }

    66% {
        fill: #be56e8;
    }

    100% {
        fill: #8c1db8;
    }
}

.cls-1,
.cls-2,
.cls-3 {
    stroke-width: 0px;
}

.cls-2 {
    fill: #f7931e;
    animation: cls2 3s ease infinite both;
}

@keyframes cls2 {
    0% {
        fill: #be56e8;
    }

    34% {
        fill: #8c1db8;
    }

    66% {
        fill: #9e3dc4;
    }

    100% {
        fill: #be56e8;
    }
}

.cls-3 {
    fill: #ed1c24;
    animation: cls3 3s ease infinite both;
}

@keyframes cls3 {
    0% {
        fill: #9e3dc4;
    }

    34% {
        fill: #be56e8;
    }

    66% {
        fill: #8c1db8;
    }

    100% {
        fill: #9e3dc4;
    }
}

.cls-4 {
    display: none;
}

#triangle {
    height: 400px;
    width: 400px;
    padding-top: 30px;
    animation: triangle 3s both infinite;
}

#triangle2 {
    height: 400px;
    width: 400px;
    padding-top: 30px;

}

@keyframes triangle {
    0% {
        transform: translateY(0px);
    }

    50% {
        transform: translateY(20px);
    }

    100% {
        transform: translateY(0px);
    }
}

#triangle {
    width: 100px;
    height: auto;
    margin-top: -4.25em;
}

#triangle2 {
    width: 100px;
    height: auto;
    margin-top: -3.25em;
}


.hidden-th {
    visibility: hidden;
}
/* ... */

